--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -16,11 +16,13 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "yup": "^1.4.0"
   },
