--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
