--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-table": "^7.8.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
